--- a/server/.env.example
+++ b/server/.env.example
@@ -7,16 +7,13 @@ API_VERSION=v1
 MONGODB_URI=mongodb://localhost:27017/chennai-floodguard
 MONGODB_TEST_URI=mongodb://localhost:27017/chennai-floodguard-test
 
-# JWT Configuration
+# JWT Configuration (REQUIRED)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRE=7d
-JWT_REFRESH_SECRET=your-refresh-token-secret
-JWT_REFRESH_EXPIRE=30d
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
-# Redis Configuration (for caching and sessions)
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
+# Redis Configuration (REQUIRED for caching, queues, WebSocket scaling)
+REDIS_URL=redis://localhost:6379
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
@@ -37,23 +34,14 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # ML Pipeline
-ML_UPDATE_CRON=0 */15 * * *
-ML_SCRIPT_PATH=../public/models/chennai_realtime_flood_heatmap.py
+ML_CRON_INTERVAL_MIN=30
 
-# OSRM (OpenStreetMap Routing Machine) - for road-level routing
-OSRM_API_URL=http://router.project-osrm.org
+# OSRM (OpenStreetMap Routing Machine)
+OSRM_URL=https://router.project-osrm.org
 
 # Fallback APIs for weather data
 WEATHER_FALLBACK_API_KEY=
 WEATHER_FALLBACK_API_URL=https://api.weatherapi.com/v1
 
-# Log Configuration
-LOG_LEVEL=info
-LOG_FILE_PATH=./logs
-
-# Health Check
-HEALTH_CHECK_INTERVAL=60000
-
 # Emergency Alert Configuration
-MAX_DRIVER_DISTANCE_KM=10
-DRIVER_ASSIGNMENT_TIMEOUT_MS=30000
+MAX_DRIVER_DISTANCE_KM=25
