--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "lint": "eslint src --ext .ts",
     "ml:update": "python3 ../public/models/chennai_realtime_flood_heatmap.py"
   },
@@ -39,7 +40,9 @@
     "@sentry/node": "^7.99.0",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
-    "polyline": "^0.2.0"
+    "polyline": "^0.2.0",
+    "uuid": "^9.0.0",
+    "@socket.io/redis-adapter": "^8.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -61,6 +64,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1"
+    "@typescript-eslint/parser": "^6.19.1",
+    "@types/uuid": "^9.0.7"
   }
 }
