--- a/server/.env.example
+++ b/server/.env.example
@@ -12,11 +12,8 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
-# Redis Configuration (REQUIRED for caching, queues, WebSocket scaling)
-REDIS_URL=redis://localhost:6379
-
 # CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173,http://localhost:8080,http://localhost:8081
 
 # Open-Meteo API (no key required, but can set custom endpoint)
 OPEN_METEO_API_URL=https://api.open-meteo.com/v1
