--- a/server/package.json
+++ b/server/package.json
@@ -35,14 +35,11 @@
     "winston": "^3.11.0",
     "web-push": "^3.6.7",
     "node-cache": "^5.1.2",
-    "ioredis": "^5.3.2",
-    "bull": "^4.12.0",
     "@sentry/node": "^7.99.0",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "polyline": "^0.2.0",
-    "uuid": "^9.0.0",
-    "@socket.io/redis-adapter": "^8.2.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
